feat: 新增设备电量功能，优化Android电量获取逻辑
1. 为Windows端新增设备电量函数调用，通过kernel32.dll获取系统电源状态
2. 优化Android端电量获取逻辑，优先使用精确电量API替代旧的Intent计算方式
3. 为移动全局变量初始化默认电量为-1
4. 添加Android编译时弃用警告检查配置
5. 更新文档说明设备电量函数支持桌面端
6. 优化DEX加载器缓存避免重复加载
7. 修复Android WebView错误处理兼容问题